--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     
     <body>
-        
+        <h1>This is my Second Website!</h1>
+        <p>Practicing git commands</p>
     </body>
 </html>
